Fix backgrounds wrap

--- a/SoloLearn/src/containers/UserPostEditor/styles.scss
+++ b/SoloLearn/src/containers/UserPostEditor/styles.scss
@@ -26,6 +26,7 @@
 		.backgrounds-container {
 			margin: 5px 0;
 			align-self: center;
+			flex-flow: wrap;
 		}
 	}
 
